tests/macros/duplicate/transform.stderr
error: duplicate option `transform`
 --> $DIR/transform.rs:4:9
  |
4 |         transform: todo!(),
  |         ^^^^^^^^^
