tests/macros/duplicate/transform.rs
fn main() {
    let q = inquisition::questions![input {
        transform: todo!(),
        transform: todo!(),
    }];
}
